# LoggerBuf

./: .coverage  .gitignore  CONTRIBUTING.md  ExampleClientClass.py  README.es.md  README.md  __init__.py  class_one.py  concurrency_refactor.plan.md  config.py  debugger.py  debulogger.py  decoder.py  eventlogger.py  fix_task.py  fix_task2.py  loggerbuf.json  pyproject.toml  pytest.ini  queue_instrumentation.plan.md  queue_metrics.py  schema_loader.py  settings_globals.py  setup.py  telemetry.py  test_desc.pb  test_frame.py  test_proto.py
.github/workflows/: ci.yml
cli/: console.py
cli/handlers/: decode.py  events.py  fields.py  protos.py  stress.py
cli/utils/: registry.py  schema_validator.py
data_logs/: __init__.py  event_example_pb2.py  event_status_pb2.py  generic_log_pb2.py  klaks_logging_pb2.py  main_data_pb2.py
data_logs/protos/: .loggerbuf_registry.json  .loggerbuf_schema_snapshot.json  create_classes.py  demo_event.proto  event_example.proto  event_status.proto  generic_log.proto  klaks_logging.proto  main_data.proto  registry.proto
loggerbuf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/loggerbuf/: __init__.py  debugger.py  schema_loader.py  telemetry.py
src/loggerbuf/cli/: console.py
src/loggerbuf/cli/handlers/: decode.py  events.py  fields.py  protos.py  stress.py
src/loggerbuf/cli/utils/: registry.py  schema_validator.py
src/loggerbuf/data_logs/: __init__.py  main_data_pb2.py  registry_pb2.py
src/loggerbuf/data_logs/protos/: .loggerbuf_schema_snapshot.json  main_data.proto
tests/: proto_utils.py  test_cli_decode_debug.py  test_config.py  test_console_cli.py  test_create_classes.py  test_debugger.py  test_debugger_coverage.py  test_decoder.py  test_events_cli.py  test_json_formatter.py  test_protos_coverage.py  test_queue_metrics.py  test_schema_validator.py  test_telemetry.py  test_telemetry_counters.py  test_telemetry_coverage.py
